<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/ioScreen"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:gravity="bottom|end"
        android:maxLength="32"
        android:padding="14dp"
        android:textSize="30sp"
        android:typeface="normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ioScreen"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/clear_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/del_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnPower"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/sqrt_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/percent_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/seven_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/eight_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/nine_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/divide_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/four_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/five_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/six_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/multiply_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/one_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/two_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/three_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/subtraction_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/dot_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/zero_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn00"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/dualzero_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace" />

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:fontFamily="serif"
                android:text="@string/add_text"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:typeface="monospace"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="serif"
            android:text="@string/equal_text"
            android:textAllCaps="false"
            android:textSize="30sp"
            android:typeface="monospace" />


    </LinearLayout>
</RelativeLayout>